== Version ?: unreleased ==

* assertThat() accepts a single boolean parameter and
  wraps any non-Matcher third parameter with equalTo().

* Removed null return value from assertThat(). [114]

* Fixed wrong variable name in contains(). [109]

* Added Hamcrest_Core_Set to assert isset().
  assertThat($anArray, set('foo'));  // isset($anArray['foo'])

* Added Hamcrest_Core_IsTypeOf and Hamcrest_Type_Is* to assert gettype(). [115]
  assertThat($count, typeOf('int'));
  assertThat($count, integerValue());
  assertThat('foo', stringValue());

* Added Hamcrest_Text_MatchesPattern for regex matching with preg_match().
  assertThat('foobar', matchesPattern('/o+b/'));

* Added synonyms:
  atLeast() for greaterThanOrEqualTo()
  atMost() for lessThanOrEqualTo()


== Version 0.1.0: Released Jul 7 2010 ==

* Created PEAR package

* Initial core matchers
